begin gallery implementation